--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -7,7 +7,13 @@
     you are learning about. Whenever you learn something new about a topic,
     make an entry summarizing what you've learned.</p>
 
+    {% if user.is_authenticated %}
+    <a class="btn btn-lg btn-primary" href="{% url 'learning_logs:topics' %}"
+        role="button">Begin &raquo;</a>
+    {% else %}
     <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}"
-       role="button">Register &raquo;</a>
+        role="button">Register &raquo;</a>
+    {% endif %}
+
 </div>
 {% endblock page_header %}
