footer with the name added

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -55,6 +55,21 @@
       {% block content %}{% endblock content %}
     </div>
   </main>
+
+<footer class="blog-footer"
+style="padding: 2.5rem 0;
+  color: #999;
+  text-align: center;
+  background-color: #ffffff ;
+  border-top: .05rem solid #e5e5e5;
+  ">
+  <p>Project from the book
+    <a href="https://nostarch.com/python-crash-course-3rd-edition">Python Crash Course</a>
+    by Eric Matthes.</p>
+  <p style="margin-bottom: 0;">Made by
+    <a href="">Yerdos Sadvakassov</a>.</p>
+</footer>
+
 </body>
 
 </html>
