link to github added

--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -67,7 +67,7 @@ style="padding: 2.5rem 0;
     <a href="https://nostarch.com/python-crash-course-3rd-edition">Python Crash Course</a>
     by Eric Matthes.</p>
   <p style="margin-bottom: 0;">Made by
-    <a href="">Yerdos Sadvakassov</a>.</p>
+    <a href="https://github.com/yerdos-s/Learning-Log.git">Yerdos Sadvakassov</a>.</p>
 </footer>
 
 </body>
